base-apps/weather-kitchen-frontend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-kitchen-frontend
  namespace: weather-kitchen-frontend
  labels:
    app: weather-kitchen-frontend
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: weather-kitchen-frontend
